# veil

./: .gitignore  BUILD_SETUP.md  Cargo.toml  Dockerfile  LICENSE  README.md  hook.ps1  install-build-tools.bat
.github/workflows/: build.yml  release.yml
src/: main.rs  utils.rs
src/engines/: analyzer.rs  auditor.rs  bookmarks.rs  context.rs  context_suggest.rs  drift.rs  envoy.rs  memoir.rs  mod.rs  monitor.rs  patterns.rs  phantom.rs  recorder.rs  remote.rs  sage.rs  sandbox.rs  schedule.rs  sync.rs  team.rs  temporal.rs  trace.rs
