[package]
name = "veil"
version = "0.1.0"
edition = "2021"
description = "A thin, intelligent layer over your terminal"

[[bin]]
name = "veil"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
anyhow = "1"

[profile.release]
opt-level = 3
strip = true
lto = true