[package]
name = "veil"
version = "0.1.1"
edition = "2021"
description = "A thin, intelligent layer over your terminal. Undo anything, preview everything, remember it all."
license = "MIT"
repository = "https://github.com/SiphiweRadebe/veil"
homepage = "https://github.com/SiphiweRadebe/veil"
readme = "README.md"
keywords = ["terminal", "cli", "shell", "productivity", "undo"]
categories = ["command-line-utilities"]

[[bin]]
name = "veil"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"
anyhow = "1"

[profile.release]
opt-level = 3
strip = true
lto = true